<resources>
    <string name="app_name">MoveoTask</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="register_a_new_account">Register a new account</string>
    <string name="full_name">Full Name</string>
    <string name="verify_password">Verify Password</string>
    <string name="already_a_member">Already a member?</string>
    <string name="back_to_login">Back to Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email_to_reset_password">Enter your email to reset password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_mode">List Mode</string>
    <string name="map_mode">Map Mode</string>
    <string name="create_new_note">Create new note</string>
</resources>